test/error/end_label_class_wrong.sv
// pattern: element "yes" has mismatched end label "no"
class yes;
endclass : no
